src/test/deca/codegen/extension/invalid/created/ArithmeticExp2.deca
// Description:
//    Division par 0 (par modulo)
// Resultats:
//  Exception in thread "main" java.lang.ArithmeticException: / by zero
// 	at ArithmeticExp2.main(Unknown Source)

{
    int a = 3 % 0;
}